language/move-prover/spec-lang/tests/sources/expressions_err.exp
error: undeclared `x`

    ┌── tests/sources/expressions_err.move:12:7 ───
    │
 12 │       x
    │       ^
    │

error: no function named `not_declared` found

    ┌── tests/sources/expressions_err.move:17:7 ───
    │
 17 │       not_declared()
    │       ^^^^^^^^^^^^^^
    │

error: expected `num` but found `bool`

    ┌── tests/sources/expressions_err.move:22:7 ───
    │
 22 │       false
    │       ^^^^^
    │

error: no matching declaration of `>`

    ┌── tests/sources/expressions_err.move:27:7 ───
    │
 27 │       x > y
    │       ^^^^^
    │
    = outruled candidate `>(num, num): bool` (expected `num` but found `vector<num>` for argument 1)

error: expected `(num, bool)` but found `bool`

    ┌── tests/sources/expressions_err.move:32:7 ───
    │
 32 │       false
    │       ^^^^^
    │

error: no matching declaration of `wrongly_typed_callee`

    ┌── tests/sources/expressions_err.move:37:42 ───
    │
 37 │     define wrongly_typed_caller(): num { wrongly_typed_callee(1, 1) }
    │                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    = outruled candidate `wrongly_typed_callee(num, bool): num` (expected `bool` but found `u128` for argument 2)

error: no matching declaration of `wrongly_typed_fun_arg_callee`

    ┌── tests/sources/expressions_err.move:41:50 ───
    │
 41 │     define wrongly_typed_fun_arg_caller(): num { wrongly_typed_fun_arg_callee(|x| false) }
    │                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    = outruled candidate `wrongly_typed_fun_arg_callee(|num|num): num` (expected `num` but found `bool` for argument 1)

error: ambiguous application of `ambigous_callee`

    ┌── tests/sources/expressions_err.move:48:7 ───
    │
 48 │       ambigous_callee()
    │       ^^^^^^^^^^^^^^^^^
    │
    = matching candidate `ambigous_callee(): num`
    = matching candidate `ambigous_callee(): num`

error: no matching declaration of `wrong_instantiation`

    ┌── tests/sources/expressions_err.move:54:7 ───
    │
 54 │       wrong_instantiation<u64>(x)
    │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    = outruled candidate `wrong_instantiation(#0): #0` (generic count mismatch (expected 2 but found 1))
